# Vader-Sentiment-App-Web

./: Instructions.md  README.md
src/: sentiment.py
src/templates/: index.html  layout.html
vader-sentiment-app/: Instructions.md  pyproject.toml
vader-sentiment-app/src/: app.py  web.py
vader-sentiment-app/src/static/: style.css
vader-sentiment-app/tests/: test_sentiment.py
