[tool.poetry]
name = "vader-sentiment-app"
version = "0.1.0"
description = "A simple sentiment analysis application using the vaderSentiment library."
authors = ["Your Name <youremail@example.com>"]
license = "MIT"

[tool.poetry.dependencies]
python = "^3.7"
vaderSentiment = "^3.3.1"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"